--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -84,7 +84,7 @@ button {
 .wrapper {
 	display: flex;
 	flex-direction: column;
-	height: 100%;
+	min-height: 100%;
 }
 
 .container {
@@ -100,14 +100,8 @@ button {
 }
 
 .main {
-	flex: 1 1 auto;
 	margin-left: 280px;
 }
-
-.footer {
-	flex: 0 1 auto;
-}
-
 
 .sidebar {
 	position: fixed;
@@ -424,7 +418,6 @@ button {
 	&__label {
 		position: relative;
 		border-radius: 8px 8px 8px 0px;
-		// padding: 10px 8px 10px 28px;
 		padding: 10px 8px;
 		color: #fff;
 		font-size: 12px;
