--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -182,6 +182,10 @@
 		display: block;
 	}
 
+	.accordion-button {
+		cursor: pointer;
+	}
+
 	.footer-phone__link {
 		padding-left: 32px;
 		margin-left: 10px;
