--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -281,6 +281,16 @@
 		}
 	}
 
+	&-button {
+		cursor: context-menu !important;
+	}
+
+	&-body__link {
+		&:hover {
+			color: $pink
+		}
+	}
+
 }
 
 .rating {
